code refactor after MR